# dualsense-input

./: Cargo.toml  README.md  log.txt
examples/: basic.rs  quiet.rs
src/: config.rs  controller.rs  event.rs  lib.rs  types.rs
