[package]
name = "dualsense-input"
version = "0.1.0"
edition = "2021"
description = "Read PS5 DualSense controller input — buttons, sticks, triggers, touchpad, IMU — with configurable thresholds and filtering"
license = "MIT"
repository = "https://github.com/yourname/dualsense-input"
keywords = ["dualsense", "ps5", "controller", "hid", "gamepad"]
categories = ["game-development", "hardware-support", "os"]

[dependencies]
hidapi = "2"

[dev-dependencies]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "quiet"
path = "examples/quiet.rs"
